org1/org1-ca-svc.yaml
#---------------- CA OE1 Service ---------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ca-org1
  name: ca-org1
  namespace: hyperledger
spec:
  type: LoadBalancer
  ports:
  - name: "https"
    port: 7054
    targetPort: 7054
  selector:
    app: ca-org1
