org1/org1-ca-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: ca-org1
  name: ca-org1
  namespace: hyperledger
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: ca-org1
    servicePort: 7054
