org1/org1-peer0-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: peer0-org1
  name: peer0-org1
  namespace: hyperledger
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: peer0-org1
    servicePort: 7051
